Added Navbar and SearchBar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,39 @@
 <html>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <style>
+        .topnav {
+  background-color: rgba(51, 51, 51, 0);
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #353232;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: rgba(76, 175, 79, 0);
+  color: grey;
+}
+        </style>
+      </div>
+
     <div class='content'>
      
         <center>
@@ -14,4 +49,6 @@
         </style>
 
     </div>
+    <script async src="https://cse.google.com/cse.js?cx=012842563162747559821:jd3gbq0uhdl"></script>
+    <div class="gcse-search"></div>
 </html>
